--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,12 @@
     <properties>
         <java.version>1.8</java.version>
     </properties>
+    <developers>
+        <developer>
+            <name>zhangzhen</name>
+            <email>xxxxx</email>
+        </developer>
+    </developers>
 
     <dependencies>
         <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-pool2 -->
@@ -64,7 +70,12 @@
             <artifactId>mybatis-spring-boot-starter</artifactId>
             <version>2.1.3</version>
         </dependency>
-
+        <!-- https://mvnrepository.com/artifact/com.alibaba/druid-spring-boot-starter -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid-spring-boot-starter</artifactId>
+            <version>1.1.23</version>
+        </dependency>
     </dependencies>
 
     <build>
